syntax = "proto3";

package authentication;

service AuthenticationService {
  rpc RegisterAccount(RegisterAccountRequest) returns (Authentication) {}
  rpc LoginAccount(LoginAccountRequest) returns (LoginAccountResponse) {}
  rpc ValidateAccount(ValidateAccountRequest) returns (Account) {}
}

enum Role {
  ROLE_UNSPECIFIED = 0;
  ROLE_ORGANIZATION = 1;
  ROLE_BASE = 2;
  ROLE_SUPER_ADMIN = 3;
  ROLE_USER = 4;
}

message Authentication {
  Role role = 1;
  string displayName = 2;
  string email = 3;
  string password = 4;
}

message Account {
  string id = 1;
  Role role = 2;
  string displayName = 3;
  string email = 4;
  string password = 5;
}

message RegisterAccountRequest {
  string displayName = 1;
  string email = 2;
  string password = 3;
}

// message RegisterAccountResponse {
// }

message LoginAccountRequest {
  string id = 1;
  string email = 2;
  string displayName = 3;
  Role role = 4;
}

message LoginAccountResponse {
  string access_token = 1;
}

message ValidateAccountRequest {
  string email = 1;
  string password = 2;
}

// message ValidateAccountResponse {
// }
